--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <link rel="stylesheet" href="css/style.css">
+  
 </head>
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <main>
+        <section class="container">
+            <img src="images/image-product-desktop.jpg" alt="" class="imagem">
+            <div class="descricao">
+                <h3 class="descricao__titulo">P E R F U M E</h3>
+                <h1 class="descricao__titulo-principal">Gabrielle Essence Eau De Parfum</h1>
+                <p class="descricao__paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quis sed asperiores a cumque tenetur cum.</p>
+                <span class="preco__atual">$149,99 <span class="preco__desconto">$169,99</span></span>
+                <button class="botao">Add to Cart </button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
